[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "rgeo"
version = "0.2.4"
description = "Offline reverse geocoding library using geonames db"
keywords = ["reverse", "geocode", "geocoding", "geo", "location"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/etrombly/rgeo"
readme = "README.md"
edition="2018"

[dependencies]
bincode = "1.3.1"
csv = "1.1.4"
lazy_static = "1.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"

[dependencies.kdtree]
version = "0.6.0"
features = ["serialize"]

[profile.release]
lto = true
