[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "rgeo"
version = "0.3.0"
description = "Offline reverse geocoding library using geonames db"
keywords = ["reverse", "geocode", "geocoding", "geo", "location"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/etrombly/rgeo"
readme = "README.md"
edition="2018"

[dependencies]
bincode = "1.3.3"
csv = "1.1.6"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
num-traits = "0.2.15"

[dependencies.kiddo]
version = "0.2.4"
features = ["serialize"]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
